[package]
name = "dockerfile-parser"
version = "0.1.0"
authors = ["Stephen OBrien <wayofthepie@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
nom = "5.1.0"
nom_locate = "2.0.0"

[dev-dependencies]
quickcheck = "0.9.2"

